--- a/index.ipynb
+++ b/index.ipynb
@@ -290,7 +290,7 @@
     "def open_restaurants(restaurants):\n",
     "    result=[]\n",
     "    for restaurant in restaurants:\n",
-    "        if "
+    "        if restaurant['is closed']"
    ]
   },
   {
