--- a/index.ipynb
+++ b/index.ipynb
@@ -290,7 +290,8 @@
     "def open_restaurants(restaurants):\n",
     "    result=[]\n",
     "    for restaurant in restaurants:\n",
-    "        if restaurant['is closed']"
+    "        if not restaurant['is closed']:\n",
+    "            "
    ]
   },
   {
