--- a/index.ipynb
+++ b/index.ipynb
@@ -291,7 +291,7 @@
     "    result=[]\n",
     "    for restaurant in restaurants:\n",
     "        if not restaurant['is closed']:\n",
-    "            "
+    "            result.append(restaurant)"
    ]
   },
   {
