--- a/index.ipynb
+++ b/index.ipynb
@@ -283,14 +283,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
     "    result=[]\n",
     "    for restaurant in restaurants:\n",
-    "        if not restaurant['is_closed']:\n",
+    "        if restaurant['is_closed']:\n",
     "            result.append(restaurant)"
    ]
   },
