Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -290,8 +290,9 @@
     "def open_restaurants(restaurants):\n",
     "    result=[]\n",
     "    for restaurant in restaurants:\n",
-    "        if restaurant['is_closed']:\n",
-    "            result.append(restaurant)"
+    "        if not restaurant['is_closed']:\n",
+    "            result.append(restaurant)\n",
+    "    return resu"
    ]
   },
   {
